force-app/main/default/objects/Fan_Activity_Pattern__c/fields/Analyzed_Date__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_Date__c</fullName>
    <description>팬 활동 데이터의 집계 및 분석이 수행된 날짜를 기록</description>
    <inlineHelpText>팬 활동 데이터의 집계 및 분석이 수행된 날짜를 기록</inlineHelpText>
    <label>Analyzed Date</label>
    <type>Date</type>
</CustomField>