force-app/main/default/objects/Fan_Activity_Pattern__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>활동 패턴을 분석할 팬(Person Account)을 참조</description>
    <inlineHelpText>활동 패턴을 분석할 팬(Person Account)을 참조</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fan Activity Patterns (Fan)</relationshipLabel>
    <relationshipName>Fan_Activity_Patterns1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>