force-app/main/default/objects/Fan_Activity_Pattern__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>활동 패턴을 집계하고 분석할 시즌을 참조(팬별·시즌별로 하나의 활동 패턴을 관리)</description>
    <inlineHelpText>활동 패턴을 집계하고 분석할 시즌을 참조</inlineHelpText>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Fan Activity Patterns</relationshipLabel>
    <relationshipName>Fan_Activity_Patterns</relationshipName>
    <type>Lookup</type>
</CustomField>